css/learn.nest.sass.css
/* ... */
#Logo {
  -webkit-box-flex: 1.5;
  -moz-box-flex: 1.5;
  box-flex: 1.5;
  -webkit-flex: 1.5 1 250px;
  -moz-flex: 1.5 1 250px;
  -ms-flex: 1.5 1 250px;
  flex: 1.5 1 250px;
  padding: 1.5rem 3rem 4.5rem 3rem; }

.intro {
  -webkit-box-flex: 3;
  -moz-box-flex: 3;
  box-flex: 3;
  -webkit-flex: 3 1 30%;
  -moz-flex: 3 1 30%;
  -ms-flex: 3 1 30%;
  flex: 3 1 30%;
  font-size: 1rem;
  line-height: 1.6rem;
  text-align: right;
  background: rgba(50, 50, 0, 0.7);
  border-radius: 0 1.5rem 1.5rem 0;
  padding: 2rem 3rem 2rem 2rem;
  margin-left: auto; }

/*Block level elements, and non-text objects */
.container {
  width: 94%;
  margin: auto; }

section {
  display: -webkit-box;
  display: -moz-box;
  display: box;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -moz-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: start;
  -moz-box-pack: start;
  box-pack: start;
  -webkit-justify-content: flex-start;
  -moz-justify-content: flex-start;
  -ms-justify-content: flex-start;
  -o-justify-content: flex-start;
  justify-content: flex-start;
  -ms-flex-pack: start;
  -webkit-box-align: start;
  -moz-box-align: start;
  box-align: start;
  -webkit-align-items: flex-start;
  -moz-align-items: flex-start;
  -ms-align-items: flex-start;
  -o-align-items: flex-start;
  align-items: flex-start;
  -ms-flex-align: start;
  margin-right: auto;
  margin-bottom: 4rem; }

aside {
  -webkit-box-flex: 1;
  -moz-box-flex: 1;
  box-flex: 1;
  -webkit-flex: 1 1 300px;
  -moz-flex: 1 1 300px;
  -ms-flex: 1 1 300px;
  flex: 1 1 300px;
  margin-top: 4rem;
  display: -webkit-box;
  display: -moz-box;
  display: box;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -moz-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-box-pack: start;
  -moz-box-pack: start;
  box-pack: start;
  -webkit-justify-content: flex-start;
  -moz-justify-content: flex-start;
  -ms-justify-content: flex-start;
  -o-justify-content: flex-start;
  justify-content: flex-start;
  -ms-flex-pack: start;
  -webkit-box-align: stretch;
  -moz-box-align: stretch;
  box-align: stretch;
  -webkit-align-items: stretch;
  -moz-align-items: stretch;
  -ms-align-items: stretch;
  -o-align-items: stretch;
  align-items: stretch;
  -ms-flex-align: stretch; }
  @media only screen and (min-width: 1700px) {
    aside {
      flex: 2 0 400px; } }

.outerDiv {
  background-color: rgba(50, 50, 0, 0.7);
  -moz-border-radius: 2rem;
  -webkit-border-radius: 2rem;
  -ms-border-radius: 2rem;
  border-radius: 2rem; }

.innerDiv {
  background-color: rgba(50, 50, 50, 0.7);
  -moz-border-radius: 1.5rem;
  -webkit-border-radius: 1.5rem;
  -ms-border-radius: 1.5rem;
  border-radius: 1.5rem;
  display: -webkit-box;
  display: -moz-box;
  display: box;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -moz-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-box-align: end;
  -moz-box-align: end;
  box-align: end;
  -webkit-align-items: flex-end;
  -moz-align-items: flex-end;
  -ms-align-items: flex-end;
  -o-align-items: flex-end;
  align-items: flex-end;
  -ms-flex-align: end;
  margin: 15px; }
  .innerDiv p {
    width: calc(100% - 3rem);
    -webkit-align-self: center;
    -moz-align-self: center;
    align-self: center;
    -ms-flex-item-align: center; }

.pixWrap {
  display: -webkit-box;
  display: -moz-box;
  display: box;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -moz-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-align: center;
  -moz-box-align: center;
  box-align: center;
  -webkit-align-items: center;
  -moz-align-items: center;
  -ms-align-items: center;
  -o-align-items: center;
  align-items: center;
  -ms-flex-align: center;
  margin: 15px; }
  .pixWrap p {
    margin: 5px;
    padding: 10px; }

.pixHeader {
  background-color: rgba(50, 50, 50, 0.7);
  border-radius: 15px 15px 0 0;
  margin: 15px 15px 0 15px; }

.pixBody {
  background-color: rgba(50, 50, 50, 0.7);
  border-radius: 0 0 15px 15px;
  display: -webkit-box;
  display: -moz-box;
  display: box;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -moz-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-align: center;
  -moz-box-align: center;
  box-align: center;
  -webkit-align-items: center;
  -moz-align-items: center;
  -ms-align-items: center;
  -o-align-items: center;
  align-items: center;
  -ms-flex-align: center;
  margin: 0 15px 15px 15px; }

.pix {
  margin: 15px;
  -webkit-box-flex: auto;
  -moz-box-flex: auto;
  box-flex: auto;
  -webkit-flex: auto;
  -moz-flex: auto;
  -ms-flex: auto;
  flex: auto;
  -webkit-box-align: center;
  -moz-box-align: center;
  box-align: center;
  -webkit-align-items: center;
  -moz-align-items: center;
  -ms-align-items: center;
  -o-align-items: center;
  align-items: center;
  -ms-flex-align: center;
  border: 1px solid #50500f; }
  .pix img {
    width: 100%;
    height: auto; }

div .gallery {
  -webkit-box-flex: auto;
  -moz-box-flex: auto;
  box-flex: auto;
  -webkit-flex: auto;
  -moz-flex: auto;
  -ms-flex: auto;
  flex: auto;
  width: 500px;
  margin: 20px; }
  div .gallery img {
    width: 100%;
    height: auto; }

.imgResize {
  -webkit-box-flex: auto;
  -moz-box-flex: auto;
  box-flex: auto;
  -webkit-flex: auto;
  -moz-flex: auto;
  -ms-flex: auto;
  flex: auto;
  -webkit-align-self: center;
  -moz-align-self: center;
  align-self: center;
  -ms-flex-item-align: center; }
  .imgResize img {
    width: 90%;
    height: auto; }
/* ... */

